<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.nasdanika.core</groupId>
	<version>2026.2.0</version>
	<artifactId>parent</artifactId>
	<packaging>pom</packaging>
	<name>Nasdanika Core Parent</name>
	<description>Parent pom.</description>

	<url>https://docs.nasdanika.org/core/index.html</url>
		
	<licenses>
		<license>
			<name>Eclipse Public License 2.0</name>
			<url>https://nasdanika.org/builds/master/eclipse-public-license-2.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/Nasdanika/core</url>
	</scm>

	<properties>
		<jacoco.version>0.8.14</jacoco.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
		<linksource>true</linksource>
	</properties>	

	<build>
	    <extensions>
	      <extension>
	        <groupId>org.apache.maven.wagon</groupId>
	         <artifactId>wagon-ssh</artifactId>
	         <version>3.5.3</version>
	      </extension>
	    </extensions>
		<plugins>
			<plugin>
			        <groupId>org.jacoco</groupId>
			        <artifactId>jacoco-maven-plugin</artifactId>
			        <version>${jacoco.version}</version>
			        <executions>
			          <execution>
			            <goals>
			              <goal>prepare-agent</goal>
			            </goals>
			          </execution>
			          <execution>
			            <id>report</id>
			            <phase>prepare-package</phase>
			            <goals>
			              <goal>report</goal>
			            </goals>
			          </execution>
			        </executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.21.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.4.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		        <plugin>
		            <groupId>org.apache.maven.plugins</groupId>
		            <artifactId>maven-surefire-plugin</artifactId>
		            <version>3.5.4</version>
		        </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
			
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<failOnError>false</failOnError>
							<additionalOptions>-Xdoclint:none</additionalOptions>
							<additionalOptions><![CDATA[--allow-script-in-comments]]></additionalOptions>
							<linksource>true</linksource>	
			        			<useStandardDocletOptions>true</useStandardDocletOptions>
							<links>
								<link>https://javadoc.io/doc/org.eclipse.emf/org.eclipse.emf.common/2.28.0/</link>
								<link>https://picocli.info/apidocs/</link>
								
								<!-- Core -->
								<link>https://javadoc.io/doc/org.nasdanika.core/drawio/latest/</link>
								<link>https://javadoc.io/doc/org.nasdanika.core/drawio-model/latest/</link>
								<link>https://javadoc.io/doc/org.nasdanika.core/diagram/latest/</link>
								<link>https://javadoc.io/doc/org.nasdanika.core/common/latest/</link>
								<link>https://javadoc.io/doc/org.nasdanika.core/persistence/latest/</link>
								<link>https://javadoc.io/doc/org.nasdanika.core/resources/latest/</link>
								<link>https://javadoc.io/doc/org.nasdanika.core/graph/latest/</link>
								<link>https://javadoc.io/doc/org.nasdanika.core/graph.model/latest/</link>
								<link>https://javadoc.io/doc/org.nasdanika.core/ncore/latest/</link>
								<link>https://javadoc.io/doc/org.nasdanika.core/ncore.gen/latest/</link>
								<link>https://javadoc.io/doc/org.nasdanika.core/exec/latest/</link>
								<link>https://javadoc.io/doc/org.nasdanika.core/exec.gen/latest/</link>
								<link>https://javadoc.io/doc/org.nasdanika.core/emf/latest/</link>
								<link>https://javadoc.io/doc/org.nasdanika.core/maven/latest/</link>
								<link>https://javadoc.io/doc/org.nasdanika.core/capability/latest/</link>
								<link>https://javadoc.io/doc/org.nasdanika.core/cli/latest/</link>
								<link>https://javadoc.io/doc/org.nasdanika.core/http/latest/</link>
							</links>
							<header>
								<![CDATA[
								      <script async src="https://www.googletagmanager.com/gtag/js?id=G-9BRJVLK8CC"></script>
								      <script>
								        window.dataLayer = window.dataLayer || [];
								        function gtag(){dataLayer.push(arguments);}
								        gtag('js', new Date());
      
								        gtag('config', 'G-9BRJVLK8CC');
								      </script>    
								]]>
							</header>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-api</artifactId>
		    <version>6.0.1</version>
		    <scope>test</scope>
		</dependency>		
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-engine</artifactId>
		    <version>6.0.1</version>
		    <scope>test</scope>
		</dependency>		
		
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.27.7</version>
			<scope>test</scope>
		</dependency>				
	</dependencies>

	<organization>
		<name>Nasdanika</name>
		<url>https://github.com/Nasdanika</url>
	</organization>

	<developers>
		<developer>
			<id>pvlasov</id>
			<name>Pavel Vlasov</name>
			<email>Pavel.Vlasov@nasdanika.org</email>
			<roles>
				<role>Lead Developer</role>
			</roles>
			<timezone>-5</timezone>
		</developer>
	</developers>
	
	<modules>
		<module>drawio</module>
		<module>drawio.model</module>
		<module>diagram</module>
		<module>common</module>
		<module>persistence</module>
		<module>mapping</module>
		<module>resources</module>
		<module>graph</module>
		<module>graph.model</module>
		<module>ncore</module>
		<module>ncore.gen</module>
		<module>exec</module>
		<module>exec.gen</module>
		<module>emf</module>
		<module>maven</module> 
		<module>capability</module>
		<module>cli</module>
		<module>http</module>
		<!--<module>groovy</module>-->
		<module>telemetry</module>
		<module>telemetry.model</module>
		<module>echarts</module>
	</modules>	

	<distributionManagement>
		<site>
			<id>docs.nasdanika.org</id>
			<url>scp://docs.nasdanika.org/core/maven-site</url>
		</site>
	</distributionManagement>	
    <repositories>
        <repository>
            <id>nasdanika-snapshots</id>
            <url>https://maven.nasdanika.org/snapshots</url>
        </repository>
    </repositories> 

	 <profiles>
		<profile>
			<id>central</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>	
					<plugin>					
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>0.9.0</version>
						<extensions>true</extensions>
						<configuration>
							<publishingServerId>central</publishingServerId>
							<autoPublish>true</autoPublish>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>